--- a/pokemon-teams-frontend/index.html
+++ b/pokemon-teams-frontend/index.html
@@ -10,10 +10,9 @@
       <h2>Pokemon Teams!</h2>
     </header>
 
-    <main>
-      <!-- Add our Pokemon -->
-    </main>
+    
 
+    <!-- <script src="./src/matt.js"></script> -->
     <script src="./src/index.js"></script>
   </body>
 </html>
